--- a/exame/templates/acessar_exame.html
+++ b/exame/templates/acessar_exame.html
@@ -24,7 +24,7 @@
 
 </style>
 
-    <form method="POST" action="{% url 'exame:exame' %}">
+    <!--<form method="POST" action="{% url 'exame:exame' %}">
         {% csrf_token %}
         <div class="d-flex justify-content-center m-5">
             <div class="align-self-center ">
@@ -32,6 +32,6 @@
                 <button class="btn btn-outline-secondary" type="submit" id="button-addon1">Acessar Exame</button>
             </div>
         </div>
-    </form>
+    </form>-->
 
 {% endblock %}
