--- a/exame/templates/exame.html
+++ b/exame/templates/exame.html
@@ -6,6 +6,109 @@
 
 {% block content %}
 
+{% if questoes %}
+
+    <!-- start Quiz button -->
+    <div class="start_btn"><button>Iniciar Exame</button></div>
+    <!-- Info Box -->
+    <div class="info_box">
+        <div class="info-title"><span>Algunas informações</span></div>
+        <div class="info-list">
+            <div class="info">1. Você tem somente<span> 15 segundos</span> para cada questão.</div>
+            <div class="info">2. Depois de selecionar a resposta, não é possível alterar.</div>
+            <div class="info">3. Você não conseguirá selecionar a resposta após o tempo se esgotar.</div>
+            <div class="info">4. Você não pode sair do exame enquanto estiver realizando-o.</div>
+            <div class="info">5. Ao final sua pontuação é mostrada na tela.</div>
+        </div>
+        <div class="buttons">
+            <button class="quit">Sair</button>
+            <button class="restart">Continuar</button>
+        </div>
+    </div>
+    <!-- Quiz Box -->
+    <div class="quiz_box">
+        <header>
+            <div class="title">Exame Digital</div>
+            <div class="timer">
+                <div class="time_left_txt">Tempo</div>
+                <div class="timer_sec">15</div>
+            </div>
+            <div class="time_line"></div>
+        </header>
+        <section>
+            <div class="que_text">
+                <!-- Here I've inserted question from JavaScript -->
+            </div>
+            <div class="option_list">
+                <!-- Here I've inserted options from JavaScript -->
+            </div>
+        </section>
+        <!-- footer of Quiz Box -->
+        <footer>
+            <div class="total_que">
+                <!-- Here I've inserted Question Count Number from JavaScript -->
+            </div>
+            <button class="next_btn">Próxima</button>
+        </footer>
+    </div>
+    <!-- Result Box -->
+    <div class="result_box">
+        <div class="icon">
+            <i class="fas fa-crown"></i>
+        </div>
+        <div class="complete_text">Você terminou o Exame</div>
+        <div class="score_text">
+            <!-- Here I've inserted Score Result from JavaScript -->
+        </div>
+        <div class="buttons">
+            <button class="restart">Reiniciar</button>
+            <button class="quit">Sair</button>
+        </div>
+    </div>
+    <!-- Inside this JavaScript file I've inserted Questions and Options only 
+    <script src="{% static 'js/questions.js' %}"></script> -->
+    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
+    <script src="{% static 'js/script.js' %}"></script>
+
+    <script>
+
+        let questions = []
+        let i = 0
+
+        {% for questao in questoes %}
+            {
+            questions.push(
+                {
+                    numb: ++i,
+                    question: '{{ questao.pergunta }}',
+                    answer: '{{ questao.resposta }}',
+                    options: [
+                        '{{ questao.alternativa1 }}',
+                        '{{ questao.alternativa2 }}',
+                        '{{ questao.alternativa3 }}',
+                        '{{ questao.alternativa4 }}',
+                    ]
+                }
+            )
+            }
+        {% endfor %}
+
+
+    </script>
+
+{% else %}
+
+<div class="d-flex justify-content-center m-5">
+    <div class="align-self-center ">
+        <p>O código de Exame informado não é válido!</p>
+    <p>
+        Para acessar um Exame entre com o código clicando na opção <a class="btn btn-outline-secondary" href="{% url 'exame:acessar_exame' %}">Acessar Exame</a>
+    </p>
+    </div>
+</div>
+    
+{% endif %}
+
 
 
 {% endblock %}
