--- a/exame/templates/gerar_exame.html
+++ b/exame/templates/gerar_exame.html
@@ -19,11 +19,7 @@
     }
 
     .load {
-        width: 100px;
-        height: 100px;
-        position: absolute;
-        top: 30%;
-        left: 45%;
+        text-align: center;
         color: blue;
         visibility: hidden;
     }
@@ -48,9 +44,9 @@
 
 
 
-<div class="load"> 
-    <i class="fa fa-cog fa-spin fa-5x fa-fw"></i>
-    ChatGPT Trabalhando...
+<div class="load">
+    <i class="fas fa-cloud-upload-alt fa-5x fa-fw"></i>
+    <p>Enviando pedido...</p>
 </div>
 
 <!-- Bootstrap core JavaScript -->
